; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-util.c_get_encoder_name.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-util.c_get_encoder_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ff_format_desc = type { i8* }
%struct.TYPE_3__ = type { i8* }

@AV_CODEC_ID_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.ff_format_desc*, i32)* @get_encoder_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_encoder_name(%struct.ff_format_desc* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.ff_format_desc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_3__*, align 8
  store %struct.ff_format_desc* %0, %struct.ff_format_desc** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = call %struct.TYPE_3__* @avcodec_find_encoder(i32 %7)
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %6, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %10 = icmp eq %struct.TYPE_3__* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @AV_CODEC_ID_NONE, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %11
  store i8* null, i8** %3, align 8
  br label %27

16:                                               ; preds = %11, %2
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %18 = icmp eq %struct.TYPE_3__* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %16
  %20 = load %struct.ff_format_desc*, %struct.ff_format_desc** %4, align 8
  %21 = getelementptr inbounds %struct.ff_format_desc, %struct.ff_format_desc* %20, i32 0, i32 0
  %22 = load i8*, i8** %21, align 8
  store i8* %22, i8** %3, align 8
  br label %27

23:                                               ; preds = %16
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i8*, i8** %25, align 8
  store i8* %26, i8** %3, align 8
  br label %27

27:                                               ; preds = %23, %19, %15
  %28 = load i8*, i8** %3, align 8
  ret i8* %28
}

declare dso_local %struct.TYPE_3__* @avcodec_find_encoder(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
